--- a/assets/css/contact.css
+++ b/assets/css/contact.css
@@ -195,7 +195,7 @@
     }
 }
 
-/* Small Mobile (< 480px) */
+/* Small Mobile (< 480px */
 @media (max-width: 480px) {
     .contact-container {
         margin-top: 100px;
